--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,8 @@ a {
 }
 
 .innerWidth {
-  width: 100%;
+  width: 80%;
+  margin: auto;
 }
 
 .flexCenter {
@@ -82,6 +83,20 @@ a {
   font-weight: 600;
 }
 
+.button {
+  font-weight: 500;
+  padding: 0.6rem 1.4rem;
+  color: white;
+  background: var(--blue-gradient);
+  border: none;
+  border-radius: 4px;
+  transition: all 300ms ease-in;
+}
+
+.button:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
 /* media queries */
 @media (min-width: 1536px) {
   .innerWidth {
